--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@ $(document).ready(function(){
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img" src="images/wgma.JPG"></img></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p id="wgma">We geven muco adem</p></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="img" src="images/gifsfordays.JPG"></img></a>
-		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="gifs">Gifsfordays</p></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="itext">Gifsfordays</p></a>
 		</div>
 		<div id="left">
 		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="images/kljaalter.JPG"></img></a>
-		<a href="http://www.kljaalter.be/" target="_blank"><p id="klj" >KLJ Aalter</p></a>
+		<a href="http://www.kljaalter.be/" target="_blank"><p id="itext" >KLJ Aalter</p></a>
 		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
-		<a onclick="myFunction()"><p id="wout">Wout Corijn</p></a>
+		<a onclick="myFunction()"><p id="itext">Wout Corijn</p></a>
 		<div id="snackbar">you are already on this page</div>
 		<script>
 		function myFunction() {
