--- a/index.html
+++ b/index.html
@@ -18,27 +18,21 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
-  // Add smooth scrolling to all links
+
   $("a").on('click', function(event) {
 
-    // Make sure this.hash has a value before overriding default behavior
     if (this.hash !== "") {
-      // Prevent default anchor click behavior
       event.preventDefault();
 
-      // Store hash
       var hash = this.hash;
 
-      // Using jQuery's animate() method to add smooth page scroll
-      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
       $('html, body').animate({
         scrollTop: $(hash).offset().top
       }, 800, function(){
    
-        // Add hash (#) to URL when done scrolling (default click behavior)
         window.location.hash = hash;
       });
-    } // End if
+    } 
   });
 });
 </script>
@@ -57,16 +51,18 @@ $(document).ready(function(){
 		
 		<div id="sites">
 		<div id="right">
-		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img" src="images/wgma.JPG"></img></a>
-		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p id="wgma">We geven muco adem</p></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="img" src="images/gifsfordays.JPG"></img></a>
-		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="itext">Gifsfordays</p></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitename">Gifsfordays</p></a>
+		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img" src="images/wgma.JPG"></img></a>
+		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p class="sitename" >We geven muco adem</p></a>
 		</div>
 		<div id="left">
 		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="images/kljaalter.JPG"></img></a>
-		<a href="http://www.kljaalter.be/" target="_blank"><p id="itext" >KLJ Aalter</p></a>
+		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitename">KLJ Aalter</p></a>
 		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
-		<a onclick="myFunction()"><p id="itext">Wout Corijn</p></a>
+		<a onclick="myFunction()"><p class="sitename">Wout Corijn</p></a>
+		
+		
 		<div id="snackbar">you are already on this page</div>
 		<script>
 		function myFunction() {
