--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ $(document).ready(function(){
 		
 		<div id="sitesmobile">
 		<a href="http://www.kljaalter.be/" target="_blank"><img class="imgmobile" src="images/kljaalter.JPG"></img></a>
-		<a href="http://www.kljaalter.be/" target="_blank"><p id="itextmobile" >KLJ Aalter</p></a><br>
+		<a href="http://www.kljaalter.be/" target="_blank"><p id="itextmobile" >KLJ Aalter</p></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="imgmobile" src="images/gifsfordays.JPG"></img></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="itextmobile">Gifsfordays</p></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="imgmobile" src="images/wgma.JPG"></img></a>
