--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@ $(document).ready(function(){
 		<div id="right">
 		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="img" src="images/gifsfordays.JPG"></img></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitename">Gifsfordays</p></a>
-		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img" src="images/wgma.JPG"></img></a>
-		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p class="sitename" >We geven muco adem</p></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="img" src="images/Aaripotatoes.JPG"></img></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitename" >Aari Potatoes</p></a>
+		<a target="_blank"><img class="img" src="images/white.JPG"></img></a>
+		<a target="_blank"><p class="sitename" >#</p></a>
 		</div>
 		<div id="left">
 		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="images/kljaalter.JPG"></img></a>
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitename">KLJ Aalter</p></a>
 		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
 		<a onclick="myFunction()"><p class="sitename">Wout Corijn</p></a>
+				<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
+		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p class="sitename" >We geven muco adem</p></a>
 		
 		
 		<div id="snackbar">you are already on this page</div>
