--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ $(document).ready(function(){
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitename">KLJ Aalter</p></a>
 		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
 		<a onclick="myFunction()"><p class="sitename">Wout Corijn</p></a>
-				<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
+		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p class="sitename" >We geven muco adem</p></a>
 		
 		
@@ -88,6 +88,8 @@ $(document).ready(function(){
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="itextmobile">Gifsfordays</p></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="imgmobile" src="images/wgma.JPG"></img></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p id="itextmobile">We geven muco adem</p></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="imgmobile" src="images/Aaripotatoes.JPG"></img></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><p id="itextmobile">Aari Potatoes</p></a>
 		<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="images/woutcorijn.JPG"></img></a>
 		<a href="http://www.woutcorijn.cf/" ><p id="itextmobile">Wout Corijn</p></a>
 		</div>
