--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ $(document).ready(function(){
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitename">Gifsfordays</p></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="img" src="images/Aaripotatoes.JPG"></img></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitename" >Aari Potatoes</p></a>
-		<a target="_blank"><img class="img" src="images/white.JPG"></img></a>
+		<a target="_blank"><img class="img" src="images/white.jpg"></img></a>
 		<a target="_blank"><p class="sitename" >#</p></a>
 		</div>
 		<div id="left">
