--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ $(document).ready(function(){
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitename">KLJ Aalter</p></a>
 		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
 		<a onclick="myFunction()"><p class="sitename">Wout Corijn</p></a>
-		<a href="integrated sites\wgma\index.html" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
-		<a href="integrated sites\wgma\index.html" target="_blank"><p class="sitename" >We geven muco adem</p></a>
+		<a href="wgma\index.html" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
+		<a href="wgma\index.html" target="_blank"><p class="sitename" >We geven muco adem</p></a>
 		
 		
 		<div id="snackbar">you are already on this page</div>
