--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 var howMany = 1;  // max number of items listed below
 var page = new Array(howMany+1);
 
-page[0]="site 1/index.html";
-page[1]="site 2/index.html";
+page[0]="1/index.html";
+page[1]="2/index.html";
 
 function rndnumber(){
 var randscript = -1;
