--- a/2/index.html
+++ b/2/index.html
@@ -1,6 +1,6 @@
 <html>
 		<head>
-		<link rel="icon" href="">
+		<link rel="icon" href="images/tablogo.png">
 		<title>Wout Corijn</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
