--- a/2/index.html
+++ b/2/index.html
@@ -59,7 +59,7 @@
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitetext">Aari potatoes</p></a>
 		<a href="wgma\index.html" target="_blank"><img class="sites" src="images/wgma.JPG"></img></a><br>
 		<a href="wgma\index.html" target="_blank"><p class="sitetext" >We geven muco adem</p></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="sites" src="images/white.jpg"></img></a><br>
+		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="sites" src="images/bookmarklets.JPG"></img></a><br>
 		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><p class="sitetext" >Bookmarklets</p></a>
 		
 		<div id="snackbar">you are already on this page</div>
