--- a/one.html
+++ b/one.html
@@ -10,9 +10,9 @@
   ga('send', 'pageview');
 
 </script>
-		<link rel="icon" href="images/tablogo.png">
+		<link rel="icon" href="een/images/tablogo.png">
 		<title>Wout Corijn</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="een/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Quicksand:300" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
@@ -42,29 +42,29 @@ $(document).ready(function(){
 		<p id="top">-</p>
 		<p id="you_found_the_easter_egg">Wout Corijn</p>
 		<ul>
-		<li><a href="https://www.instagram.com/woutcorijn"><img id="instalogo" src="images/logo.png"></a></li>
-		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="images/ytlogo.png"></a></li>
-		<li><a href="http://steamcommunity.com/id/woutco"><img id="steamlogo" src="images/steamlogo.png"></a></li>
+		<li><a href="https://www.instagram.com/woutcorijn"><img id="instalogo" src="een/images/logo.png"></a></li>
+		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="een/images/ytlogo.png"></a></li>
+		<li><a href="http://steamcommunity.com/id/woutco"><img id="steamlogo" src="een/images/steamlogo.png"></a></li>
 		</ul>
 		<a id="easteregg" href="#you_found_the_easter_egg">easter egg<a>
 		<div id="button"><a href="#bottom" id="projects">projects</a></div>
 		
 		<div id="sites">
 		<div id="right">
-		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="img" src="images/gifsfordays.JPG"></img></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="img" src="een/images/gifsfordays.JPG"></img></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitename">Gifsfordays</p></a>
-		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="img" src="images/Aaripotatoes.JPG"></img></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="img" src="een/images/Aaripotatoes.JPG"></img></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitename" >Aari Potatoes</p></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="img" src="images/bookmarklets.JPG"></img></a>
+		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="img" src="een/images/bookmarklets.JPG"></img></a>
 		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><p class="sitename" >Bookmarklets</p></a>
 		</div>
 		<div id="left">
-		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="images/kljaalter.JPG"></img></a>
+		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="een/images/kljaalter.JPG"></img></a>
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitename">KLJ Aalter</p></a>
-		<a onclick="myFunction()"><img class="img1" src="images/woutcorijn.JPG"></img></a>
+		<a onclick="myFunction()"><img class="img1" src="een/images/woutcorijn.JPG"></img></a>
 		<a onclick="myFunction()"><p class="sitename">Wout Corijn</p></a>
-		<a href="wgma\index.html" target="_blank"><img class="img1" src="images/wgma.JPG"></img></a>
-		<a href="wgma\index.html" target="_blank"><p class="sitename" >We geven muco adem</p></a>
+		<a href="een/wgma\index.html" target="_blank"><img class="img1" src="een/images/wgma.JPG"></img></a>
+		<a href="een/wgma\index.html" target="_blank"><p class="sitename" >We geven muco adem</p></a>
 		
 		
 		<div id="snackbar">you are already on this page</div>
@@ -78,7 +78,7 @@ $(document).ready(function(){
 		
 		</div>
 		</div>
-		<a href="#top"><img id="arrow" src="images/arrows.png"></a>
+		<a href="#top"><img id="arrow" src="een/images/arrows.png"></a>
 		
 		
 		<div id="sitesmobile">
