--- a/one.html
+++ b/one.html
@@ -82,15 +82,15 @@ $(document).ready(function(){
 		
 		
 		<div id="sitesmobile">
-		<a href="http://www.kljaalter.be/" target="_blank"><img class="imgmobile" src="images/kljaalter.JPG"></img></a>
+		<a href="http://www.kljaalter.be/" target="_blank"><img class="imgmobile" src="een/images/kljaalter.JPG"></img></a>
 		<a href="http://www.kljaalter.be/" target="_blank"><p id="itextmobile" >KLJ Aalter</p></a>
-		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="imgmobile" src="images/gifsfordays.JPG"></img></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="imgmobile" src="een/images/gifsfordays.JPG"></img></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p id="itextmobile">Gifsfordays</p></a>
-		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="imgmobile" src="images/wgma.JPG"></img></a>
+		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><img class="imgmobile" src="een/images/wgma.JPG"></img></a>
 		<a href="http://www.wegevenmucoadem.ga/" target="_blank"><p id="itextmobile">We geven muco adem</p></a>
-		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="imgmobile" src="images/Aaripotatoes.JPG"></img></a>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="imgmobile" src="een/images/Aaripotatoes.JPG"></img></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p id="itextmobile">Aari Potatoes</p></a>
-		<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="images/woutcorijn.JPG"></img></a>
+		<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="een/images/woutcorijn.JPG"></img></a>
 		<a href="http://www.woutcorijn.cf/" ><p id="itextmobile">Wout Corijn</p></a>
 		</div>
 		
