--- a/one.html
+++ b/one.html
@@ -92,6 +92,8 @@ $(document).ready(function(){
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p id="itextmobile">Aari Potatoes</p></a>
 		<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="een/images/woutcorijn.JPG"></img></a>
 		<a href="http://www.woutcorijn.cf/" ><p id="itextmobile">Wout Corijn</p></a>
+				<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="een/images/bookmarklets.JPG"></img></a>
+		<a href="http://www.woutcorijn.cf/" ><p id="itextmobile">Bookmarklets</p></a>
 		</div>
 		
 		<p id="bottom" class="footer" >Site developed by Wout Corijn</p>
