--- a/2sites/one.html
+++ b/2sites/one.html
@@ -55,8 +55,8 @@ $(document).ready(function(){
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitename">Gifsfordays</p></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="img" src="een/images/Aaripotatoes.JPG"></img></a>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitename" >Aari Potatoes</p></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="img" src="een/images/bookmarklets.JPG"></img></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><p class="sitename" >Bookmarklets</p></a>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><img class="img" src="een/images/bookmarklets.JPG"></img></a>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><p class="sitename" >INDEX</p></a>
 		</div>
 		<div id="left">
 		<a href="http://www.kljaalter.be/" target="_blank"><img class="img1" src="een/images/kljaalter.JPG"></img></a>
@@ -92,8 +92,8 @@ $(document).ready(function(){
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p id="itextmobile">Aari Potatoes</p></a>
 		<a href="http://www.woutcorijn.cf/" ><img class="imgmobile" src="een/images/woutcorijn.JPG"></img></a>
 		<a href="http://www.woutcorijn.cf/" ><p id="itextmobile">Wout Corijn</p></a>
-				<a href="https://woutcorijn.github.io/Bookmarklets/" ><img class="imgmobile" src="een/images/bookmarklets.JPG"></img></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" ><p id="itextmobile">Bookmarklets</p></a>
+				<a href="https://woutcorijn.github.io/INDEX/" ><img class="imgmobile" src="een/images/bookmarklets.JPG"></img></a>
+		<a href="https://woutcorijn.github.io/INDEX/" ><p id="itextmobile">INDEX</p></a>
 		</div>
 		
 		<p id="bottom" class="footer" >Site developed by Wout Corijn</p>
