--- a/index.html
+++ b/index.html
@@ -1,20 +1,74 @@
-<script>
-var howMany = 1;  // max number of items listed below
-var page = new Array(howMany+1);
+<html>
+		<head>
+		<link rel="icon" href="een/images/tablogo.png">
+		<title>Wout Corijn</title>
+		<link rel="stylesheet" type="text/css" href="2sites/twee/index.css">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
-page[0]="one.html";
-page[1]="two.html";
+		</head>
+		<body>
+		<div id="page">
+		<p class="sam">W O U T   C O R I J N</p>
+		<script>
+  $(function(){
+    var $container = $('#container');
+	var $insta = $('#instalogo');
+	var $yt = $('#ytlogo');
+	var $st = $('#stlogo');
 
-function rndnumber(){
-var randscript = -1;
-while (randscript < 0 || randscript > howMany || isNaN(randscript)){
-randscript = parseInt(Math.random()*(howMany+1));
-}
-return randscript;
-}
-quo = rndnumber();
-quox = page[quo];
-window.location=(quox);
-// End -->
-</SCRIPT>
-</script>
+    $container.mouseover(function(){
+      var rgb = [
+        parseInt(Math.random() * 255),
+        parseInt(Math.random() * 255),
+        parseInt(Math.random() * 255)
+      ];
+      $container
+   	  .css('background-color', 'rgb(' + rgb.join(',') + ')')
+        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
+		
+	   $insta
+	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
+        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
+		
+		$yt
+	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
+        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
+		
+		$st
+	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
+        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
+
+		
+  });
+   });
+		</script>
+		<script src="js.js"></script>
+		<a id="easter" href="#" onmouseover="myTimer=setTimeout('myFunction()', 10000);" onmouseout="clearTimeout(myTimer);"><div id="container"></div></a>
+		<ul>
+		<li><a href="https://www.instagram.com/woutcorijn/"><img id="instalogo" src="2sites/twee/images/logo.png"></a></li>
+		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="2sites/twee/images/ytlogo.png"></a></li>
+		<li><a href="http://steamcommunity.com/id/woutco"><img id="stlogo" src="2sites/twee/images/steamlogo.png"></a></li>
+		</ul>
+		<p id="ai1">Active</p>
+        <a href="http://www.kljaalter.be/" target="_blank"><img class="sites" id="klj" src="2sites/twee/images/kljaalter.JPG"></a><br>
+		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitetext">kljaalter<p>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><img class="sites" src="2sites/twee/images/bookmarklets.JPG"></img></a><br>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><p class="sitetext" >INDEX</p></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="sites" id="" src="2sites/twee/images/gifsfordays.JPG"></a><br>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitetext">gifsforday</p></a>
+		<a onclick="snackbar()"><img class="sites" id="" src="2sites/twee/images/woutcorijn.JPG"></a><br>
+		<a onclick="snackbar()"><p class="sitetext">Wout Corijn</p></a>
+		<p id="ai2">Inactive</p>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="sites" id="" src="2sites/twee/images/Aaripotatoes.JPG"></a><br>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitetext">Aari potatoes</p></a>
+		<a href="2sites/twee/wgma\index.html" target="_blank"><img class="sites" src="2sites/twee/images/wgma.JPG"></img></a><br>
+		<a href="2sites/twee/wgma\index.html" target="_blank"><p class="sitetext" >We geven muco adem</p></a>
+		
+		<div id="snackbar">you are already on this page</div>
+		
+		<p class="footer" >Site developed by <a href="http://www.woutcorijn.cf/" id="wout">Wout Corijn<a/></p>
+		</div>
+		<script src="2sites/twee/js.js"></script>
+		</body>
+</html>
