--- a/2sites/two.html
+++ b/2sites/two.html
@@ -1,8 +1,8 @@
 <html>
 		<head>
-		<link rel="icon" href="images/tablogo.png">
+		<link rel="icon" href="een/images/tablogo.png">
 		<title>Wout Corijn</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="twee/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 
@@ -43,29 +43,32 @@
   });
    });
 		</script>
+		<script src="js.js"></script>
 		<a id="easter" href="#" onmouseover="myTimer=setTimeout('myFunction()', 10000);" onmouseout="clearTimeout(myTimer);"><div id="container"></div></a>
 		<ul>
-		<li><a href="https://www.instagram.com/woutcorijn/"><img id="instalogo" src="images/logo.png"></a></li>
-		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="images/ytlogo.png"></a></li>
-		<li><a href="http://steamcommunity.com/id/woutco"><img id="stlogo" src="images/steamlogo.png"></a></li>
+		<li><a href="https://www.instagram.com/woutcorijn/"><img id="instalogo" src="twee/images/logo.png"></a></li>
+		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="twee/images/ytlogo.png"></a></li>
+		<li><a href="http://steamcommunity.com/id/woutco"><img id="stlogo" src="twee/images/steamlogo.png"></a></li>
 		</ul>
-        <a href="http://www.kljaalter.be/" target="_blank"><img class="sites" id="klj" src="images/kljaalter.JPG"></a><br>
+		<p id="ai1">Active</p>
+        <a href="http://www.kljaalter.be/" target="_blank"><img class="sites" id="klj" src="twee/images/kljaalter.JPG"></a><br>
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitetext">kljaalter<p>
-		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="sites" id="" src="images/gifsfordays.JPG"></a><br>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><img class="sites" src="twee/images/bookmarklets.JPG"></img></a><br>
+		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><p class="sitetext" >INDEX</p></a>
+		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="sites" id="" src="twee/images/gifsfordays.JPG"></a><br>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitetext">gifsforday</p></a>
-		<a onclick="snackbar()"><img class="sites" id="" src="images/woutcorijn.JPG"></a><br>
+		<a onclick="snackbar()"><img class="sites" id="" src="twee/images/woutcorijn.JPG"></a><br>
 		<a onclick="snackbar()"><p class="sitetext">Wout Corijn</p></a>
-		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="sites" id="" src="images/Aaripotatoes.JPG"></a><br>
+		<p id="ai2">Inactive</p>
+		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="sites" id="" src="twee/images/Aaripotatoes.JPG"></a><br>
 		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitetext">Aari potatoes</p></a>
-		<a href="wgma\index.html" target="_blank"><img class="sites" src="images/wgma.JPG"></img></a><br>
-		<a href="wgma\index.html" target="_blank"><p class="sitetext" >We geven muco adem</p></a>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><img class="sites" src="images/bookmarklets.JPG"></img></a><br>
-		<a href="https://woutcorijn.github.io/Bookmarklets/" target="_blank"><p class="sitetext" >Bookmarklets</p></a>
+		<a href="twee/wgma\index.html" target="_blank"><img class="sites" src="twee/images/wgma.JPG"></img></a><br>
+		<a href="twee/wgma\index.html" target="_blank"><p class="sitetext" >We geven muco adem</p></a>
 		
 		<div id="snackbar">you are already on this page</div>
 		
 		<p class="footer" >Site developed by <a href="http://www.woutcorijn.cf/" id="wout">Wout Corijn<a/></p>
 		</div>
-		<script src="js.js"></script>
+		<script src="twee/js.js"></script>
 		</body>
 </html>
