--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="2sites/twee/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<link rel="manifest" href="/manifest.json">
+		<link rel="manifest" href="manifest.json">
 		</head>
 		<body>
 		<div id="page">
