--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 		<head>
-		<link rel="icon" href="een/images/tablogo.png">
+		<link rel="icon" href="/2sites/een/images/tablogo.png">
 		<title>Wout Corijn</title>
 		<link rel="manifest" href="manifest.json">
 		<link rel="stylesheet" type="text/css" href="2sites/twee/index.css">
