--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="2sites/twee/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		<script src="js.js"></script>
 		</head>
 		<body>
 		<div id="page">
@@ -44,6 +43,7 @@
   });
    });
 		</script>
+		<script src="2sites/twee/js.js"></script>
 		<a id="easter" href="#" onmouseover="myTimer=setTimeout('myFunction()', 10000);" onmouseout="clearTimeout(myTimer);"><div id="container"></div></a>
 		<ul>
 		<li><a href="https://www.instagram.com/woutcorijn/"><img id="instalogo" src="2sites/twee/images/logo.png"></a></li>
