--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 		<a onclick="snackbar()"><img class="sites" id="" src="2sites/twee/images/woutcorijn.JPG"></a><br>
 		<a onclick="snackbar()"><p class="sitetext">Wout Corijn</p></a>
 		<p id="ai2">Inactive</p>
-		<a href="http://www.aaripotatoes.cf/" target="_blank"><img class="sites" id="" src="2sites/twee/images/Aaripotatoes.JPG"></a><br>
-		<a href="http://www.aaripotatoes.cf/" target="_blank"><p class="sitetext">Aari potatoes</p></a>
+		<a href="https://woutcorijn.github.io/Aari.potatoes/" target="_blank"><img class="sites" id="" src="2sites/twee/images/Aaripotatoes.JPG"></a><br>
+		<a href="https://woutcorijn.github.io/Aari.potatoes/" target="_blank"><p class="sitetext">Aari potatoes</p></a>
 		<a href="2sites/twee/wgma\index.html" target="_blank"><img class="sites" src="2sites/twee/images/wgma.JPG"></img></a><br>
 		<a href="2sites/twee/wgma\index.html" target="_blank"><p class="sitetext" >We geven muco adem</p></a>
 		
