--- a/2sites/two.html
+++ b/2sites/two.html
@@ -67,7 +67,7 @@
 		
 		<div id="snackbar">you are already on this page</div>
 		
-		<p class="footer" >Site developed by <a href="http://www.woutcorijn.cf/" id="wout">Wout Corijn<a/></p>
+		<p class="footer" >Site developed by <a href="http://www.woutcorijn.ga/" id="wout">Wout Corijn<a/></p>
 		</div>
 		<script src="twee/js.js"></script>
 		</body>
