--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 		<p id="ai1">-</p>
         <a href="http://www.kljaalter.be/" target="_blank"><img class="sites" id="klj" src="2sites/twee/images/kljaalter.JPG"></a><br>
 		<a href="http://www.kljaalter.be/" target="_blank"><p class="sitetext">kljaalter<p>
+        <a href="https://www.soulandstuff.cf/" target="_blank"><img class="sites" id="klj" src="2sites/twee/images/soulandstuff.JPG"></a><br>
+		<a href="https://www.soulandstuff.cf/" target="_blank"><p class="sitetext">Soul&Stuff<p>
 		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><img class="sites" src="2sites/twee/images/bookmarklets.JPG"></img></a><br>
 		<a href="https://woutcorijn.github.io/INDEX/" target="_blank"><p class="sitetext" >INDEX</p></a>
 		<a href="http://www.gifsfordays.tk/" target="_blank"><img class="sites" id="" src="2sites/twee/images/gifsfordays.JPG"></a><br>
