--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 		<!-- <div id="snackbar">you are already on this page</div> -->
 		<!-- <p class="footer" >Site developed by <a href="http://www.woutcorijn.ga" id="wout">Wout Corijn<a/></p> -->
 		</div>
+		<a id="projects" href="https://woutcorijn.github.io/INDEX/">PROJECTS</a>
 		<script src="2sites/twee/js.js"></script>
 		</body>
 </html>
