--- a/index.html
+++ b/index.html
@@ -1,81 +1,18 @@
 <html>
-		<head>
-		<link rel="icon" href="2sites/een/images/tablogo.png">
-		<title>Wout Corijn</title>
-		<link rel="manifest" href="manifest.json">
-		<link rel="stylesheet" type="text/css" href="2sites/twee/index.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-		</head>
-		<body>
-		<div id="page">
-		<p class="sam">W O U T   C O R I J N</p>
-		<script>
-  $(function(){
-    var $container = $('#container');
-	var $insta = $('#instalogo');
-	var $yt = $('#ytlogo');
-	var $st = $('#stlogo');
-	var $gh = $('#ghlogo');
-	var $tw = $('#twlogo');
-
-    $container.mouseover(function(){
-      var rgb = [
-        parseInt(Math.random() * 255),
-        parseInt(Math.random() * 255),
-        parseInt(Math.random() * 255)
-      ];
-      $container
-   	  .css('background-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-	   $insta
-	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-		$yt
-	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-		$st
-	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-		$gh
-	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-		$tw
-	   .css('border-bottom-color', 'rgb(' + rgb.join(',') + ')')
-        .css('color', 'rgb(' + [255-rgb[0], 255-rgb[1], 255-rgb[2]].join(',') + ')');
-		
-  });
-   });
-		</script>
-		<script src="2sites/twee/js.js"></script>
-		<a id="easter" href="#" onmouseover="myTimer=setTimeout('myFunction()', 10000);" onmouseout="clearTimeout(myTimer);"><div id="container"></div></a>
-		<ul>
-		<li><a href="https://github.com/woutcorijn?tab=repositories"><img id="ghlogo" src="2sites/twee/images/githublogo.svg"></a></li>
-		<li><a href="https://www.instagram.com/woutcorijn/"><img id="instalogo" src="2sites/twee/images/logo.png"></a></li>
-		<li><a href="https://twitter.com/WoutCorijn"><img id="twlogo" src="2sites/twee/images/twitterlogo.png"></a></li>
-		<li><a href="https://www.youtube.com/woutcorijn"><img id="ytlogo" src="2sites/twee/images/ytlogo.png"></a></li>
-		<li><a href="http://steamcommunity.com/id/woutco"><img id="stlogo" src="2sites/twee/images/steamlogo.png"></a></li>
-		</ul>
-		<!-- <p id="ai1">-</p> -->
-        <!-- <a href="http://www.kljaalter.be/" target="_blank"><img class="sites" id="klj" src="2sites/twee/images/kljaalter.JPG"></a><br> -->
-		<!-- <a href="http://www.kljaalter.be/" target="_blank"><p class="sitetext">kljaalter<p> -->
-        <!-- <a href="https://www.soulandstuff.cf/" target="_blank"><img class="sites" id="klj" src="2sites/twee/images/soulandstuff.JPG"></a><br> -->
-		<!-- <a href="https://www.soulandstuff.cf/" target="_blank"><p class="sitetext">Soul&Stuff<p> -->
-		<!-- <a href="https://woutcorijn.github.io/INDEX/" target="_blank"><img class="sites" src="2sites/twee/images/bookmarklets.JPG"></img></a><br> -->
-		<!-- <a href="https://woutcorijn.github.io/INDEX/" target="_blank"><p class="sitetext" >INDEX</p></a> -->
-		<!-- <a href="http://www.gifsfordays.tk/" target="_blank"><img class="sites" id="" src="2sites/twee/images/gifsfordays.JPG"></a><br> -->
-		<!-- <a href="http://www.gifsfordays.tk/" target="_blank"><p class="sitetext">gifsforday</p></a> -->
-		<!-- <a onclick="snackbar()"><img class="sites" id="" src="2sites/twee/images/woutcorijn.JPG"></a><br> -->
-		<!-- <a onclick="snackbar()"><p class="sitetext">Wout Corijn</p></a> -->
-		<!-- <div id="snackbar">you are already on this page</div> -->
-		<!-- <p class="footer" >Site developed by <a href="http://www.woutcorijn.ga" id="wout">Wout Corijn<a/></p> -->
-		</div>
-		<a id="projects" href="https://woutcorijn.github.io/INDEX/">PROJECTS</a>
-		<script src="2sites/twee/js.js"></script>
-		</body>
+ <head>
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="Style.css" rel="stylesheet">
+  <title>Index of /WoutCorijn</title>
+ </head>
+ <body>
+<h1>Index of /WoutCorijn</h1>
+<table><tr><th colspan="2"><p class="FakeLink">Name</p></th><th><th><p class="FakeLink">Description</p></th></tr>
+<tr><th colspan="5"><hr></th></tr>
+<tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
+<tr><td><a href="Projects.html">Projects</a></td><td>&nbsp;</td></tr>
+<tr><td><a href="Social_Links.html">Social_Links</a></td><td>&nbsp;</td></tr>
+<tr><th colspan="5"><hr></th></tr>
+</table>
+<address>Made by Wout Corijn</address>
+</body>
 </html>
