--- a/Social_Links.html
+++ b/Social_Links.html
@@ -5,7 +5,7 @@
   <title>Index of /WoutCorijn/Social_Links</title>
  </head>
  <body>
-<h1>Index of /WoutCorijn/Social_Links</h1>
+<h1 class="Title">Index of /WoutCorijn/Social_Links</h1>
 <table><tr><th colspan="2"><p class="FakeLink">Name</p></th><th><th><p class="FakeLink">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
 <tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
