--- a/Projects.html
+++ b/Projects.html
@@ -5,22 +5,22 @@
   <title>Index of /WoutCorijn/Projects</title>
  </head>
  <body>
-<h1>Index of /WoutCorijn/Projects</h1>
-<table><tr><th><p class="FakeLink">Name</p></th><th><a class="FakeLink">Created On</a></th><th><p class="FakeLink">Description</p></th></tr>
+<h1 class="Title">Index of /WoutCorijn/Projects</h1>
+<table><tr><th><p class="FakeLink">Name</p></th><th><a class="FakeLink">Created On</a></th><th><p Id="DescriptionHead">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
-<tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
-<tr><td><a href="https://samcorijn.com/" target="_blank">Sam Corijn</a></td><td>29-Oct-2019</td><td>Website Sam Corijn</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/Card-Deck/" target="_blank">Card Deck</a></td><td>26-Mar-2019</td><td>A Card deck simulator.</td></tr>
-<tr><td><a href="https://www.soulandstuff.cf/" target="_blank">Soul&Stuff</a></td><td>02-Dec-2018</td><td>Website from the band Soul&Stuff.</td></tr>
-<tr><td><a href="https://www.harpg.ga/" target="_blank">Home Appliance RPG</a></td><td>22-Oct-2018</td><td>RPG Game</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/Nine-Lines/" target="_blank">Nine lines</a></td><td>10-Jun-2018</td><td>A Website that creates random patterns with 9 lines.</td></tr>
-<tr><td><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotating potato browser</a></td><td>26-Mar-2018</td><td>A google based browser with a rotating potato.</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/refrigeratorsimulator/" target="_blank">Refrigerator Simulator</a></td><td>26-Mar-2018</td><td>A Refrigerator Simulator.</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/Cryptocoins/" target="_blank">Cryptocoins</a></td><td>25-Mar-2018</td><td>Cryptocurrency game.</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/freeVbucks/" target="_blank">V-Bucks for Clicks</a></td><td>24-Mar-2018</td><td>Fake free V-bucks website.</td></tr>
-<tr><td><a href="https://www.kljaalter.be/" target="_blank">KLJ Aalter</a></td><td>27-Feb-2017</td><td>Website KLJ Aalter</td></tr>
-<tr><td><a href="https://www.woutcorijn.cf/" target="_blank">Woutcorijn.cf</a></td><td>02-May-2017</td><td>Personal Website</td></tr>
-<tr><td><a href="https://woutcorijn.github.io/gifsfordays/" target="_blank">gifsfordays</a></td><td>02-May-2017</td><td>A Website that randomly displays gifs.</td></tr>
+<tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td class="Description"> - </td></tr>
+<tr><td><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></td><td>29-Oct-2019</td><td class="Description">Website Sam Corijn</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/Card-Deck/" target="_blank">Card Deck</a></td><td>26-Mar-2019</td><td class="Description">A Card deck simulator.</td></tr>
+<tr><td><a href="https://www.soulandstuff.cf/" target="_blank">Soul&Stuff</a></td><td>02-Dec-2018</td><td class="Description">Website from the band Soul&Stuff.</td></tr>
+<tr><td><a href="https://www.harpg.ga/" target="_blank">Home Appliance RPG</a></td><td>22-Oct-2018</td><td class="Description">RPG Game</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/Nine-Lines/" target="_blank">Nine lines</a></td><td>10-Jun-2018</td><td class="Description">A Website that creates random patterns with 9 lines.</td></tr>
+<tr><td><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">www.rotatingpotatobrowser.ga</a></td><td>26-Mar-2018</td><td class="Description">A google based browser with a rotating potato.</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/refrigeratorsimulator/" target="_blank">Refrigerator Simulator</a></td><td>26-Mar-2018</td><td class="Description">A Refrigerator Simulator.</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/Cryptocoins/" target="_blank">Cryptocoins</a></td><td>25-Mar-2018</td><td class="Description">Cryptocurrency game.</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/freeVbucks/" target="_blank">V-Bucks for Clicks</a></td><td>24-Mar-2018</td><td class="Description">Fake free V-bucks website.</td></tr>
+<tr><td><a href="https://www.kljaalter.be/" target="_blank">www.kljaalter.be</a></td><td>27-Feb-2017</td><td class="Description">Website KLJ Aalter</td></tr>
+<tr><td><a href="https://www.woutcorijn.cf/" target="_blank">Woutcorijn.cf</a></td><td>02-May-2017</td><td class="Description">Personal Website</td></tr>
+<tr><td><a href="https://woutcorijn.github.io/gifsfordays/" target="_blank">gifsfordays</a></td><td>02-May-2017</td><td class="Description">A Website that randomly displays gifs.</td></tr>
 
 
 
