--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <head>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="Style.css" rel="stylesheet">
+   <link rel="shortcut icon" type="image/png" href="images/Icon.png">
   <title>Index of /WoutCorijn</title>
  </head>
  <body>
