--- a/Projects.html
+++ b/Projects.html
@@ -9,7 +9,7 @@
 <h1 class="Title">Index of /WoutCorijn/Projects</h1>
 <table><tr><th><p class="FakeLink">Name</p></th><th><a class="FakeLink">Created On</a></th><th><p Id="DescriptionHead">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
-<tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td class="Description"> - </td></tr>
+<tr><td><a href="https://www.woutcorijn.cf">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
 <tr><td><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></td><td>29-Oct-2019</td><td class="Description">Website Sam Corijn</td></tr>
 <tr><td><a href="https://woutcorijn.github.io/Card-Deck/" target="_blank">Card Deck</a></td><td>26-Mar-2019</td><td class="Description">A Card deck simulator.</td></tr>
 <tr><td><a href="https://www.soulandstuff.cf/" target="_blank">Soul&Stuff</a></td><td>02-Dec-2018</td><td class="Description">Website from the band Soul&Stuff.</td></tr>
