--- a/Social_Links.html
+++ b/Social_Links.html
@@ -9,7 +9,7 @@
 <h1 class="Title">Index of /WoutCorijn/Social_Links</h1>
 <table><tr><th colspan="2"><p class="FakeLink">Name</p></th><th><th><p class="FakeLink">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
-<tr><td><a href="index.html">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
+<tr><td><a href="https://www.woutcorijn.cf">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
 <tr><td><a href="https://github.com/woutcorijn">Github</a></td><td>&nbsp;</td></tr>
 <tr><td><a href="https://www.instagram.com/woutcorijn/">Instagram</a></td><td>&nbsp;</td></tr>
 <tr><td><a href="https://twitter.com/WoutCorijn">Twitter</a></td><td>&nbsp;</td></tr>
