--- a/Projects.html
+++ b/Projects.html
@@ -7,7 +7,7 @@
  </head>
  <body>
 <h1 class="Title">Index of /WoutCorijn/Projects</h1>
-<table><tr><th><p class="FakeLink">Name</p></th><th><a class="FakeLink">Created On</a></th><th><p Id="DescriptionHead">Description</p></th></tr>
+<table><tr><th><p class="FakeLink">Name</p></th><th><a class="FakeLink">Created On</a></th><th><p id="DescriptionHead">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
 <tr><td><a href="https://www.woutcorijn.cf">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
 <tr><td><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></td><td>29-Oct-2019</td><td class="Description">Website Sam Corijn</td></tr>
