--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <h1 class="Title">Index of /WoutCorijn</h1>
 <table><tr><th colspan="2"><p class="FakeLink">Name</p></th><th><th><p class="FakeLink">Description</p></th></tr>
 <tr><th colspan="5"><hr></th></tr>
-<tr><td><a href="https://www.woutcorijn.cf">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
-<tr><td><a href="https://www.woutcorijn.cf/Projects">Projects</a></td><td>&nbsp;</td></tr>
-<tr><td><a href="https://www.woutcorijn.cf/Social_Links">Social_Links</a></td><td>&nbsp;</td></tr>
+<tr><td><a href="https://www.woutcorijn.com">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
+<tr><td><a href="https://www.woutcorijn.com/Projects">Projects</a></td><td>&nbsp;</td></tr>
+<tr><td><a href="https://www.woutcorijn.com/Social_Links">Social_Links</a></td><td>&nbsp;</td></tr>
 <tr><th colspan="5"><hr></th></tr>
 </table>
 <address>Made by Wout Corijn</address>
