--- a/Projects.html
+++ b/Projects.html
@@ -20,7 +20,7 @@
 <tr><td><a href="https://woutcorijn.github.io/Cryptocoins/" target="_blank">Cryptocoins</a></td><td>25-Mar-2018</td><td class="Description">Cryptocurrency game.</td></tr>
 <tr><td><a href="https://woutcorijn.github.io/freeVbucks/" target="_blank">V-Bucks for Clicks</a></td><td>24-Mar-2018</td><td class="Description">Fake free V-bucks website.</td></tr>
 <tr><td><a href="https://www.kljaalter.be/" target="_blank">www.kljaalter.be</a></td><td>27-Feb-2017</td><td class="Description">Website KLJ Aalter</td></tr>
-<tr><td><a href="https://www.woutcorijn.com/" target="_blank">Woutcorijn.cf</a></td><td>02-May-2017</td><td class="Description">Personal Website</td></tr>
+<tr><td><a href="https://www.woutcorijn.com/" target="_blank">Woutcorijn.com</a></td><td>02-May-2017</td><td class="Description">Personal Website</td></tr>
 <tr><td><a href="https://woutcorijn.github.io/gifsfordays/" target="_blank">gifsfordays</a></td><td>02-May-2017</td><td class="Description">A Website that randomly displays gifs.</td></tr>
 
 
