--- a/index.html
+++ b/index.html
@@ -1,19 +1,87 @@
+<!DOCTYPE html>
 <html>
- <head>
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="Style.css" rel="stylesheet">
-   <link rel="shortcut icon" type="image/png" href="images/Icon.png">
-  <title>Index of /WoutCorijn</title>
- </head>
- <body>
-<h1 class="Title">Index of /WoutCorijn</h1>
-<table><tr><th colspan="2"><p class="FakeLink">Name</p></th><th><th><p class="FakeLink">Description</p></th></tr>
-<tr><th colspan="5"><hr></th></tr>
-<tr><td><a href="https://www.woutcorijn.com">Parent Directory</a></td><td>&nbsp;</td><td> - </td></tr>
-<tr><td><a href="https://www.woutcorijn.com/Projects">Projects</a></td><td>&nbsp;</td></tr>
-<tr><td><a href="https://www.woutcorijn.com/Social_Links">Social_Links</a></td><td>&nbsp;</td></tr>
-<tr><th colspan="5"><hr></th></tr>
-</table>
-<address>Made by Wout Corijn</address>
+<head>
+  <title>Wout Corijn</title>
+  <link rel="stylesheet" href="style.css"></link>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+</head>
+<body onload="Title_Animation()">
+  <div id="header_border"></div>
+  <div id="main">
+    <div id="header">
+    <p id="title_name" onclick="Title_Animation()" onmouseover="Title_Animation()">Wout C.</p>
+    <ul id="nav">
+    <li><a href="#">Projects</a></li>
+    <li><a href="#">Social Links</a></li>
+  </ul>
+</div>
+  <div id="Content">
+  <p class="Heading_1">Projects</p>
+  <div class="left">
+    <p class="Heading_2"><a href="https://www.kljaalter.be/" target="_blank">kljaalter.be</a></p>
+    <p class="Date">Description</p>
+    <a href="https://www.kljaalter.be/" target="_blank"><img src="images/site_screenshot/kljaalter.png" class="Project_img"></img></a>
+</div>
+
+  <div class="right">
+  <p class="Heading_2"><a href="https://samcorijn.com/" target="_blank">samcorijn.com</a></p>
+  <p class="Date">Description</p>
+  <a href="https://samcorijn.com/" target="_blank"><img src="images/site_screenshot/Samcorijn.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="left">
+  <p class="Heading_2"><a href="https://www.harpg.ga/" target="_blank">harpg.ga</a></p>
+  <p class="Date">Home Appliance RPG</p>
+  <a href="https://www.harpg.ga/" target="_blank"><img src="images/site_screenshot/harpg.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="right">
+  <p class="Heading_2"><a href="https://www.soulandstuffband.cf/" target="_blank">soulandstuffband.cf</a></p>
+  <p class="Date">Description</p>
+  <a href="https://www.soulandstuffband.cf/" target="_blank"><img src="images/site_screenshot/soulandstuffband.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="right">
+  <p class="Heading_2"><a href="http://card-deck.woutcorijn.com/" target="_blank">card-deck.woutcorijn.com</a></p>
+  <p class="Date">Description</p>
+  <a href="http://card-deck.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/card-deck.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="left">
+  <p class="Heading_2"><a href="https://www.rotatingpotatobrowser.ga/" target="_blank">rotatingpotatobrowser.ga</a></p>
+  <p class="Date">Description</p>
+  <a href="https://www.rotatingpotatobrowser.ga/" target="_blank"><img src="images/site_screenshot/rotatingpotatobrowser.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="left">
+  <p class="Heading_2"><a href="https://cryptocoins.woutcorijn.com/" target="_blank">cryptocoins.woutcorijn.com</a></p>
+  <p class="Date">Description</p>
+  <a href="https://cryptocoins.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/cryptocoins.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="right">
+  <p class="Heading_2"><a href="http://nine-lines.woutcorijn.com/" target="_blank">nine-lines.woutcorijn.com</a></p>
+  <p class="Date">Description</p>
+  <a href="http://nine-lines.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/nine-lines.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="right">
+  <p class="Heading_2"><a href="http://freevbucks.woutcorijn.com/" target="_blank">freevbucks.woutcorijn.com</a></p>
+  <p class="Date">24/03/2018
+  <br>
+  This is a fake site I created when Fortnite was</p>
+  <a href="http://freevbucks.woutcorijn.com/" target="_blank"><img src="images/site_screenshot/freevbucks.png" class="Project_img"></img></a>
+  </div>
+
+  <div class="left">
+  <p class="Heading_2"><a href="https://gifsfordays.tk/" target="_blank">gifsfordays.tk</a></p>
+  <p class="Date">02/05/2017</p>
+  <a href="https://gifsfordays.tk/" target="_blank"><img src="images/site_screenshot/gifsfordays.png" class="Project_img"></img></a>
+  </div>
+  </div>
+</div>
 </body>
 </html>
+<script src="script.js"></script>
+<script src="http://localhost:35729/livereload.js"></script>
